# jma-data-mcp

./: .gitignore  README.md  pyproject.toml
.cursor/: mcp.sample.json
.github/workflows/: ci.yml  release.yml
jma_data_mcp/: __init__.py  __main__.py  cli.py  entrypoint.py  server.py  stations.py  weather.py
jma_data_mcp/data/: amedas_stations.json
tests/: test_cli.py  test_stations.py  test_weather.py
