[project]
name = "jma-data-mcp"
version = "0.2.0"
description = "MCP server for Japan Meteorological Agency (JMA) data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "straydog" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.3",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/koizumikento/jma-data-mcp"

[project.scripts]
jma-data-mcp = "jma_data_mcp.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jma_data_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live JMA API access",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
